fix: Fixed dialog stretch with long heading
The popup dialog window was stretched when I added a very long magnet link, making the button hard to click. Therefore, adding a hard break in the dialog heading would be more helpful.

--- a/web/assets/css/transmission-app.scss
+++ b/web/assets/css/transmission-app.scss
@@ -1574,6 +1574,7 @@ dialog {
   display: flex;
   font-size: 1.2em;
   font-weight: bold;
+  word-break: break-all;
 }
 
 .dialog-logo {
